# aoc-2024

./: .gitignore  Cargo.toml  README.md
day01/src/: part2.rs
day02/: Cargo.toml
day02/src/: lib.rs  part2.rs
day03/src/: lib.rs  part1.rs
day04/src/: lib.rs
day05/src/: part1.rs
day06/: Cargo.toml
day06/src/: lib.rs  part1.rs  part2.rs
day07/src/: lib.rs  part1.rs
day08/: Cargo.toml
day08/src/: lib.rs  part1.rs
day09/src/: lib.rs  part1.rs  part2.rs
day1/: Cargo.toml
day1/src/: part1.rs  part2.rs
day10/: Cargo.toml
day10/src/: lib.rs  part1.rs  part2.rs
day11/: Cargo.toml
day11/src/: lib.rs  part1.rs  part2.rs
day2/src/: part1.rs
day3/: Cargo.toml
day3/src/: part2.rs
day4/: Cargo.toml
day4/src/: lib.rs  part1.rs  part2.rs
day5/: Cargo.toml
day5/src/: lib.rs  part2.rs
day6/: Cargo.toml
day6/src/: lib.rs  part1.rs
day7/: Cargo.toml
day7/src/: lib.rs  part2.rs
day8/src/: lib.rs  part2.rs
day9/: Cargo.toml
day9/src/: part1.rs
