[workspace]
members = [
    "day01",
    "day02",
    "day03",
    "day04",
    "day05", 
    "day06", 
    "day07", 
    "day08",
    "day09",
    "day10",
    "day11",
    "day12"
]
resolver = "2"

[workspace.dependencies]
futures = "0.3.31"
futures-concurrency = "7.6.2"
tokio = { version = "1.42", features = ['full'] }
